--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -118,7 +118,10 @@ margin-top: 21px;
     cursor: pointer;
     color: #1C2648;
 }
-
+.error-msg{
+    color: rgb(255, 0, 0);
+    font-size: 20px;
+}
 @media screen and (min-width:600px) and (max-width:850px) {
     .log-container{
         flex-direction: column;
